# smritiretail

./: .dependency-cruiser.js  .dockerignore  .env.example  .eslintrc  .git_diff_metadataRegistry.txt  .git_session_diff.txt  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSIGNMENT_AUDIT_REPORT.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  Dockerfile  ERP_AUDIT_REPORT.md  NOTICE  README.md  REPOSITORY_CONSTITUTION.md  SECURITY.md  SMRITI_BUSINESS_AUDIT_REPORT.md  SMRITI_ERP_AUDIT_REPORT.md  SMRITI_EXISTING_SYSTEM_AUDIT_REPORT.md  SMRITI_INTERNAL_ROLE_DASHBOARDS_AUDIT.md  SMRITI_MASTER_AUDIT_REPORT.md  SMRITI_MEASUREMENT_VARIANT_AUDIT.md  SUPPORT.md  THIRD_PARTY_LICENSES.md  commit_files.txt  db_store.POLICY.md  db_store.json  desktop.ini  docker-compose.yml  frontend_backend_route_audit.json  frontend_backend_route_audit.py  frontend_backend_route_audit2.json  frontend_backend_route_audit2.py  full-tsc-output.txt  gateway.ts  generate_jwt.py  index.html  (+27 more)
backend/: .importlinter  Dockerfile  alembic.ini  alembic_status.txt  create_test_db.py  dev.txt  entrypoint.sh  fix_test_user_seed.py  lint-output.txt  migration_test_output.txt  mypy-baseline.txt  production.txt  pyproject.toml  pytest_fail.txt  pytest_output.txt  pytest_output_ascii.txt  query_users.py  requirements.txt  scratch_test_rls.py  smriti-installation-state.json  test_psv_output.txt  tmp_auth_debug.py  tmp_bootstrap_debug.py  tmp_bootstrap_trace.py  tmp_db_check.py  tmp_login_debug.py  tmp_login_test.py  tmp_reset_admin_password.py  tmp_reset_admin_password2.py  tmp_schema_check.py  tmp_user_check.py
backend/app/: main.py  (+1 more)
(+1437 files in other folders)
