# Project      : SMRITI Retail OS
# Author       : Jawahar Ramkripal Mallah
# Email        : support@smritibooks.com
# Websites     : smritibooks.com | erpnbook.com | aitdl.com
# Version      : 3.16.0
# Created      : 2026-07-11
# Modified     : 2026-07-12
# Copyright    : © SMRITIBooks.com. All Rights Reserved.
# License      : Proprietary Commercial Software
# Classification: Internal

[tool.poetry]
name = "smriti-retail-os-backend"
version = "1.0.0"
description = "SMRITI Retail OS FastAPI Python core backend service."
authors = ["Jawahar Ramkripal Mallah <support@smritibooks.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.4.7"
mypy = "^1.10.0"
bandit = "^1.7.8"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["app/tests", "app/compliance/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true

[tool.mypy-baseline]
baseline_path = "mypy-baseline.txt"
